samples/_failures_safe/1761533087_a93187_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_016bba4f.c: In function ‘main’:
./samples/SAFE/__tmp_016bba4f.c:158:9: error: expected declaration or statement at end of input
  158 |         token = get_next_token(input, &pos);
      |         ^~~~~
./samples/SAFE/__tmp_016bba4f.c:158:9: error: expected declaration or statement at end of input
